tests/ui/issues/issue-2823.stderr
error[E0599]: no method named `clone` found for struct `C` in the current scope
  --> $DIR/issue-2823.rs:13:16
   |
LL | struct C {
   | -------- method `clone` not found for this struct
...
LL |     let _d = c.clone();
   |                ^^^^^ method not found in `C`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `clone`, perhaps you need to implement it:
           candidate #1: `Clone`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
